# parafields

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  codecov.yml  external.cmake.in  paper.bib  paper.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  joss.yml  pypi.yml
cmake/: FindFFTW.cmake  external.cmake.in  fftw3-toplevel.cmake
doc/: api.rst  conf.py  index.rst  interactive.nblink  parallel.nblink  parallel.rst  sequential.nblink
include/parafields/: python.hpp
include/parafields/python/: loadbalance.hh  mpi.hh  traits.hh
jupyter/: fenicsx.ipynb  interactive.ipynb  parallel.ipynb  sequential.ipynb
lib/: python.cpp
src/parafields/: __init__.py  _parafields.cpp  exceptions.py  field.py  interactive.py  mpi.py  schema.json  stochastic.json  trend.json  utils.py
test/: conftest.py  test_field.py  test_interactive.py  test_mpi.py  test_parafields.py  test_utils.py
